--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,6 +1,8 @@
 version: '3'
 
 services:
+  db:
+    image: postgres
   web:
     build:
       context: ..
@@ -8,6 +10,7 @@ services:
     image: aristotle_metadata_registry:dev
     command: sh ./sh/entrypoint/web.sh
     environment:
+      - DATABASE_URL=postgresql://postgres:@db:5432/postgres
       - DJANGO_SETTINGS_MODULE=settings
       - PYTHONPATH=.
     ports:
@@ -15,3 +18,5 @@ services:
     volumes:
         - ../:/usr/src/app
         - ./data:/data
+    depends_on:
+      - db
