--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - DATABASE_URL=postgresql://postgres:@db:5432/postgres
       - DJANGO_SETTINGS_MODULE=settings
       - PYTHONPATH=.
+      - DJANGO_DEBUG=True
     ports:
       - "8080:8000"
     volumes:
