--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,7 @@ nosetests.xml
 *.sqlite3
 whoosh_index/
 
-src/
+#src/
 /static/
 /docs/_build
 
@@ -63,5 +63,6 @@ docker/data
 # Virtualenv
 .venv
 
-# node_modules
+# webpack
 assets/node_modules/*
+assets/dist/*
