--- a/assets/package.json
+++ b/assets/package.json
@@ -4,12 +4,15 @@
   "description": "Aristotle Frontend",
   "private": true,
   "dependencies": {
-    "jquery": "1.12.3"
+    "jquery": "^3.3.1",
+    "jquery-migrate": "^3.0.1"
   },
   "devDependencies": {
-    "webpack": "^4.19.1"
+    "webpack": "^4.19.1",
+    "webpack-cli": "^3.1.0"
   },
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
