--- a/assets/package.json
+++ b/assets/package.json
@@ -4,6 +4,7 @@
   "description": "Aristotle Frontend",
   "private": true,
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "jquery": "^3.3.1",
     "jquery-migrate": "^3.0.1"
   },
@@ -13,6 +14,7 @@
   },
   "scripts": {
     "build": "webpack",
+    "watch": "webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
