--- a/assets/package.json
+++ b/assets/package.json
@@ -9,6 +9,7 @@
     "jquery-migrate": "^3.0.1"
   },
   "devDependencies": {
+    "expose-loader": "^0.7.5",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
     "webpack-merge": "^4.1.4"
