--- a/assets/package.json
+++ b/assets/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "expose-loader": "^0.7.5",
+    "glob": "^7.1.3",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
     "webpack-merge": "^4.1.4"
