--- a/assets/package.json
+++ b/assets/package.json
@@ -13,6 +13,7 @@
     "glob": "^7.1.3",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
+    "webpack-glob-entry": "^2.1.1",
     "webpack-merge": "^4.1.4"
   },
   "scripts": {
