--- a/assets/package.json
+++ b/assets/package.json
@@ -9,6 +9,7 @@
     "jquery-migrate": "^3.0.1"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.19",
     "expose-loader": "^0.7.5",
     "glob": "^7.1.3",
     "webpack": "^4.19.1",
