--- a/assets/package.json
+++ b/assets/package.json
@@ -6,12 +6,17 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "jquery": "^3.3.1",
-    "jquery-migrate": "^3.0.1"
+    "jquery-migrate": "^3.0.1",
+    "taggle": "^1.14.0",
+    "vue": "^2.5.17",
+    "vue-simple-suggest": "^1.8.2"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
     "expose-loader": "^0.7.5",
     "glob": "^7.1.3",
+    "vue-loader": "^15.4.2",
+    "vue-template-compiler": "^2.5.17",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
     "webpack-glob-entry": "^2.1.1",
