--- a/assets/package.json
+++ b/assets/package.json
@@ -5,8 +5,10 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "jquery": "^3.3.1",
     "jquery-migrate": "^3.0.1",
+    "moment": "^2.22.2",
     "taggle": "^1.14.0",
     "vue": "^2.5.17",
     "vue-simple-suggest": "^1.8.2"
