--- a/assets/package.json
+++ b/assets/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "clipboard": "^2.0.1",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "jquery": "^3.3.1",
     "jquery-migrate": "^3.0.1",
