--- a/assets/package.json
+++ b/assets/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^3.3.7",
     "clipboard": "^2.0.1",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "jquery-migrate": "^3.0.1",
     "moment": "^2.22.2",
