--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,12 +4,12 @@ services:
   redis:
     image: redis
     ports:
-      - "6379:6379"
+      - "6379"
 
   db:
     image: postgres
     volumes:
-      - ./data/db/:/var/lib/postgresql/data
+      - ../../../data/db/:/var/lib/postgresql/data
 
   elasticsearch:
     # If elasticsearch won't boot, you need to run `sudo sysctl -w vm.max_map_count=262144`
@@ -38,33 +38,31 @@ services:
     ports:
       - 9200:9200
 
+
   web:
-    build:
-      context: ..
-      dockerfile: docker/Dockerfile.dev
-    image: aristotle_metadata_registry:dev
+    <<: &django 
+      build:
+        context: ..
+        dockerfile: docker/Dockerfile.dev
+      image: aristotle_metadata_registry:dev
+      environment:
+        - DATABASE_URL=postgresql://postgres:@db:5432/postgres
+        - DJANGO_SETTINGS_MODULE=settings
+        - PYTHONPATH=.
+      depends_on:
+        - db
+        - redis
+        - elasticsearch
     command: sh ./sh/entrypoint/web.sh
-    environment:
-      - DATABASE_URL=postgresql://postgres:@db:5432/postgres
-      - DJANGO_SETTINGS_MODULE=settings
-      - PYTHONPATH=.
     ports:
       - "8080:8000"
     volumes:
         - ../:/usr/src/app
-        - ./data:/data
-    depends_on:
-      - db
-      - redis
+        - ../../../data:/data
 
   worker:
-    image: aristotle_metadata_registry:dev
-    command: celery worker --app=aristotle_bg_workers --without-heartbeat
-    depends_on:
-      - db
-      - redis
-      - web
-      - elasticsearch
+    <<: *django
+    command: tail -f /dev/null  #&& sh ./docker/sh/entrypoint/worker.sh
     links:
       - redis
     volumes:
