--- a/assets/package.json
+++ b/assets/package.json
@@ -44,7 +44,7 @@
     "build": "webpack --config webpack.prod.js",
     "watch": "webpack --watch --config webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "installandwatch": "npm install && webpack --watch --config webpack.dev.js"
+    "installandwatch": "npm install && npm run watch"
   },
   "browserslist": [
     "last 2 versions",
