Add globals to eslint config

--- a/assets/package.json
+++ b/assets/package.json
@@ -59,6 +59,9 @@
     },
     "parserOptions": {
       "sourceType": "module"
+    },
+    "globals": {
+      "$": true
     }
   },
   "author": "",
