--- a/assets/package.json
+++ b/assets/package.json
@@ -44,6 +44,7 @@
     "build": "webpack --config webpack.prod.js",
     "watch": "webpack --watch --config webpack.dev.js",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ./src",
     "installandwatch": "npm install && npm run watch"
   },
   "browserslist": [
