add browser env

--- a/assets/package.json
+++ b/assets/package.json
@@ -56,7 +56,8 @@
   "eslintConfig": {
     "extends": "eslint:recommended",
     "env": {
-      "es6": true
+      "es6": true,
+      "browser": true
     },
     "parserOptions": {
       "sourceType": "module"
