--- a/assets/package.json
+++ b/assets/package.json
@@ -22,15 +22,21 @@
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
     "babel-loader": "^8.0.2",
+    "chai": "^4.2.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
     "eslint": "^5.6.0",
     "eslint-loader": "^2.1.1",
     "expose-loader": "^0.7.5",
     "file-loader": "^2.0.0",
+    "karma": "^3.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
+    "karma-webpack": "^3.0.5",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.3",
+    "mocha": "^5.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.17",
