--- a/assets/package.json
+++ b/assets/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@babel/core": "^7.1.0",
     "@babel/preset-env": "^7.1.0",
+    "@vue/test-utils": "^1.0.0-beta.25",
     "babel-loader": "^8.0.2",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^0.1.19",
