--- a/assets/package.json
+++ b/assets/package.json
@@ -44,6 +44,7 @@
     "vue-template-compiler": "^2.5.17",
     "webpack": "^4.19.1",
     "webpack-bundle-analyzer": "^3.0.2",
+    "webpack-bundle-tracker": "^0.3.0",
     "webpack-cli": "^3.1.0",
     "webpack-glob-entry": "^2.1.1",
     "webpack-merge": "^4.1.4"
