Run build on after success

--- a/.travis.yml
+++ b/.travis.yml
@@ -115,8 +115,9 @@ matrix:
       script:
         - npm run test
       after_success:
+        - npm run build
         - ls
-        - aws s3 sync $TRAVIS_BUILD_DIR/assets/dist s3://aristotle-travis-frontend-builds/$TRAVIS_BUILD_NUMBER
+        - aws s3 sync ./dist s3://aristotle-travis-frontend-builds/$TRAVIS_BUILD_NUMBER
 
     - stage: testing-aristotle-mdr
       env: DJANGO_VERSION='1.11'  DB=sqlite  SEARCH=elastic MODULE=amr
