--- a/.travis.yml
+++ b/.travis.yml
@@ -189,6 +189,6 @@ notifications:
 
 env:
   global:
-  - secure: DM82Fnke2OM+YeNPLjZyHttjCjslJ/lyiwkF9YA4t+o4a2IOQvj4tNgTXJ9Cxw7CZLwMFSezlO1v/wSDgKafN8CuMvvR4lpWyraDObdra4Y/zCKAYsIDQX9DdjtgchOFkbe0r+MWTPgRjohPH7bSxXZ64B2YpS5Vfz0xp35T6N8=
-  - secure: QVVs3anlQwgPuQ8jsEd4OdWEvuNuD4zwm1TXTheyIJMOy0B94H2o+V/arS3P1OSXL0MdL9k/FSVLV8nU9aCXGZKm3Ee69gVUsijb5wZPUVmrxRDYmPRV9FCSneyW3aCHkSIwvlyKXubzlaC9LgVVev23jFSTigmWCrZyC/bAn3E=
+  - secure: "b5lFAP8xPyxiDDEH+EskO+9Nc0064p7C+THyfh9QTmtoLt7EE7U4PxGYX1SG3sd4xkZuAOzEN18jKMKEKNNTDPBILk1ea6rrno2SUptJy3kzdRoFahrIUX83p1o46jii7KBWj+RvpQOgQ0U0tCxayFnw/Npg8oIWe7PTHPCVqeE="
+  - secure: "j2CTX8kNYtqo99dugPizGbq2fAxM8Q3+dyp7hfYuDIkDQqGnRG0IBv5O3iwE0JJNAjiuxdck7lDSuMvcKImB3WDZLtMEoPe8c5kFNJlEPYELDD2tRy52FW2DxdTDvxc7irydpYOvkaB/K/JMY685QUeG2FMFPpK6MXFaSVQ7nv4="
   - AWS_DEFAULT_REGION=ap-southeast-2
