--- a/.travis.yml
+++ b/.travis.yml
@@ -189,6 +189,7 @@ notifications:
 
 env:
   global:
-  - secure: "b5lFAP8xPyxiDDEH+EskO+9Nc0064p7C+THyfh9QTmtoLt7EE7U4PxGYX1SG3sd4xkZuAOzEN18jKMKEKNNTDPBILk1ea6rrno2SUptJy3kzdRoFahrIUX83p1o46jii7KBWj+RvpQOgQ0U0tCxayFnw/Npg8oIWe7PTHPCVqeE="
+  - secure: "tVD6KqvF5IUOrQZwM6DYaYDbOjEj7wPcElvQjkPtXzHTZ8Y9cFCnyvEoXUEjiP8QQztOq+Mm95+oVFt24Oks84W1js/3PWs/Wl46Zg2k2y2Z8hjvhNmP8lYvXpnjnteUwJbx4XDJ4C1QxheXmfE14NILrb1KyqUqowI9XUKKKXE="
   - secure: "j2CTX8kNYtqo99dugPizGbq2fAxM8Q3+dyp7hfYuDIkDQqGnRG0IBv5O3iwE0JJNAjiuxdck7lDSuMvcKImB3WDZLtMEoPe8c5kFNJlEPYELDD2tRy52FW2DxdTDvxc7irydpYOvkaB/K/JMY685QUeG2FMFPpK6MXFaSVQ7nv4="
   - AWS_DEFAULT_REGION=ap-southeast-2
+  - PATH=$HOME/.local/bin:$PATH
