Add uiv modal to itemPage, get rid of json in script tag

--- a/assets/package.json
+++ b/assets/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.22.2",
     "select2": "^4.0.6-rc.1",
     "taggle": "^1.14.0",
+    "uiv": "^0.27.0",
     "vue": "^2.5.17",
     "vue-simple-suggest": "^1.8.2"
   },
