--- a/assets/package.json
+++ b/assets/package.json
@@ -35,6 +35,7 @@
     "karma": "^3.0.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^3.0.5",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
@@ -55,6 +56,7 @@
     "build": "webpack --config webpack.prod.js",
     "watch": "webpack --watch --config webpack.dev.js",
     "test": "karma start karma.conf.js --single-run",
+    "watchtest": "karma start karma.conf.js",
     "lint": "eslint ./src",
     "installandwatch": "npm install && npm run watch"
   },
