--- a/assets/package.json
+++ b/assets/package.json
@@ -42,6 +42,7 @@
     "mini-css-extract-plugin": "^0.4.3",
     "mocha": "^5.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "sinon": "^6.3.4",
     "style-loader": "^0.23.0",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.17",
