--- a/assets/package.json
+++ b/assets/package.json
@@ -33,15 +33,17 @@
     "expose-loader": "^0.7.5",
     "file-loader": "^2.0.0",
     "karma": "^3.0.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^3.0.5",
+    "karma-webpack": "^4.0.0-rc.2",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.3",
     "mocha": "^5.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "puppeteer": "^1.8.0",
     "sinon": "^6.3.4",
     "style-loader": "^0.23.0",
     "vue-loader": "^15.4.2",
