--- a/assets/package.json
+++ b/assets/package.json
@@ -17,11 +17,13 @@
     "select2": "^4.0.6-rc.1",
     "taggle": "^1.14.0",
     "uiv": "^0.27.0",
+    "vis": "^4.21.0",
     "vue": "^2.5.17",
     "vue-simple-suggest": "^1.8.2"
   },
   "devDependencies": {
     "@babel/core": "^7.1.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
     "@babel/preset-env": "^7.1.0",
     "@vue/test-utils": "^1.0.0-beta.25",
     "babel-loader": "^8.0.2",
