--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,7 @@ defaults:
     stage: accessibility
     language: python
     install:
+      - nvm install 8.12.0
       - pip install codecov coveralls
       - pip install 'tox>=3.0'
     python: 3.6
