Fix docstring escapes, add ignore for bin op for now

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ ignore =
     F403,  #'from module import *' used; unable to detect undefined names
     F811,  # Redefinition of unused name
     F821   # Undefined name
+    W504   # Line break after binary operator
 exclude =
     migrations,
     tests,
