--- a/python/aristotle-metadata-registry/aristotle_mdr/schema/setup.yaml
+++ b/python/aristotle-metadata-registry/aristotle_mdr/schema/setup.yaml
@@ -2,6 +2,7 @@
   object: DataElementConcept
   checks:    
     - validator: RegexValidator
+      name: Em Dash
       severity: warning
       field: name
       regex: \w+\u2014\w+
