--- a/python/aristotle-metadata-registry/aristotle_mdr/schema/setup.yaml
+++ b/python/aristotle-metadata-registry/aristotle_mdr/schema/setup.yaml
@@ -8,4 +8,5 @@
       regex: \w+\u2014\w+
     - validator: StatusValidator
       severity: warning
-      status: Standard
+      status:
+        - Standard
