--- a/assets/package.json
+++ b/assets/package.json
@@ -5,10 +5,10 @@
   "private": true,
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "@json-editor/json-editor": "^1.1.0-beta.4",
+    "@json-editor/json-editor": "^1.2.1",
     "axios": "^0.18.0",
     "bootstrap": "^3.3.7",
-    "ckeditor": "^4.10.1",
+    "ckeditor": "^4.11.1",
     "clipboard": "^2.0.1",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "font-awesome": "^4.7.0",
@@ -17,43 +17,43 @@
     "moment": "^2.22.2",
     "select2": "^4.0.6-rc.1",
     "taggle": "^1.14.0",
-    "uiv": "^0.27.0",
+    "uiv": "^0.28.0",
     "vis": "^4.21.0",
     "vue": "^2.5.17",
     "vue-simple-suggest": "^1.8.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.0",
+    "@babel/core": "^7.1.5",
     "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-env": "^7.1.5",
     "@vue/test-utils": "^1.0.0-beta.25",
-    "babel-loader": "^8.0.2",
+    "babel-loader": "^8.0.4",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.6.0",
+    "css-loader": "^1.0.1",
+    "eslint": "^5.8.0",
     "eslint-loader": "^2.1.1",
     "expose-loader": "^0.7.5",
     "file-loader": "^2.0.0",
-    "karma": "^3.0.0",
+    "karma": "^3.1.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^4.0.0-rc.2",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
-    "mini-css-extract-plugin": "^0.4.3",
+    "mini-css-extract-plugin": "^0.4.4",
     "mocha": "^5.2.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
-    "puppeteer": "^1.8.0",
-    "sinon": "^6.3.4",
-    "style-loader": "^0.23.0",
+    "puppeteer": "^1.10.0",
+    "sinon": "^7.1.1",
+    "style-loader": "^0.23.1",
     "vue-loader": "^15.4.2",
     "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.19.1",
-    "webpack-bundle-analyzer": "^3.0.2",
-    "webpack-bundle-tracker": "^0.3.0",
-    "webpack-cli": "^3.1.0",
+    "webpack": "^4.25.1",
+    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack-bundle-tracker": "^0.4.2-beta",
+    "webpack-cli": "^3.1.2",
     "webpack-glob-entry": "^2.1.1",
     "webpack-merge": "^4.1.4"
   },
