Fix existing lint errors

--- a/assets/package.json
+++ b/assets/package.json
@@ -83,7 +83,8 @@
       "sourceType": "module"
     },
     "globals": {
-      "$": true
+      "$": true,
+      "jQuery": true
     }
   },
   "author": "",
