--- a/Pipfile
+++ b/Pipfile
@@ -32,6 +32,11 @@ wcag-zoo = "*"
 django-impersonate = "*"
 psycopg2 = "*"
 boto3 = "*"
+mypy = "*"
 
 [requires]
 python_version = "3.6"
+
+[scripts]
+test = "django-admin test --settings=aristotle_mdr.tests.settings.settings"
+lint = "flake8"
