--- a/Pipfile
+++ b/Pipfile
@@ -40,3 +40,4 @@ python_version = "3.6"
 [scripts]
 test = "django-admin test --settings=aristotle_mdr.tests.settings.settings"
 lint = "flake8"
+type = "/bin/sh -c 'mypy ./python/*/aristotle_*'"
