--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -48,6 +48,7 @@ services:
       environment:
         - DATABASE_URL=postgresql://postgres:@db:5432/postgres
         - DJANGO_SETTINGS_MODULE=settings
+        - ARISTOTLE_ASYNC_SIGNALS=True
         - PYTHONPATH=.
         - DJANGO_DEBUG=True
       depends_on:
@@ -71,7 +72,13 @@ services:
 
   worker:
     <<: *django
-    command: sh ./docker/sh/entrypoint/worker.sh
+    command: sh ./sh/entrypoint/worker.sh
+    environment:
+      - DATABASE_URL=postgresql://postgres:@db:5432/postgres
+      - DJANGO_SETTINGS_MODULE=settings
+      - ARISTOTLE_ASYNC_SIGNALS=True
+      - PYTHONPATH=.
+      - DJANGO_DEBUG=False
     links:
       - redis
     volumes:
