--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,7 @@ passenv =
 
 setenv =
     TOXDIR = {envdir}
+    aristotlemdr__BASE_DIR = {envdir}
 
     ally: ARISTOTLE_DEV_SKIP_MIGRATIONS = 1
     ally: DATABASE_URL=sqlite:////tmp/ally-db.db
@@ -84,6 +85,8 @@ deps =
 commands =
     pipenv install --dev
     pipenv graph
+
+    module_api: {envbindir}/django-admin.py collectstatic
 
     !ally: coverage run --branch --source={env:MODULE_PATH}/{env:MODULE_NAME} {envbindir}/django-admin.py test {env:MODULE_NAME}
 
