--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -3,4 +3,5 @@ sphinx-rtd-theme
 whoosh
 dj-database-url
 -e python/aristotle-metadata-registry
+-e python/aristotle-bg-workers
 -e python/aristotle-mdr-api
