--- a/assets/package.json
+++ b/assets/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-env": "^7.1.5",
     "@vue/test-utils": "^1.0.0-beta.25",
     "babel-loader": "^8.0.4",
+    "babel-plugin-istanbul": "^5.1.0",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.1",
@@ -37,6 +38,7 @@
     "file-loader": "^2.0.0",
     "karma": "^3.1.1",
     "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage": "^1.1.2",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "karma-sourcemap-loader": "^0.3.7",
