--- a/assets/package.json
+++ b/assets/package.json
@@ -14,6 +14,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "jquery-migrate": "^3.0.1",
+    "mdn-polyfills": "^5.13.0",
     "moment": "^2.22.2",
     "select2": "^4.0.6-rc.1",
     "taggle": "^1.14.0",
