--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-haystack = ">=2.7.dev1,<2.8.0"
 "django-haystack-elasticsearch" = "*"
 
 aristotle-metadata-registry = {path = "./python/aristotle-metadata-registry", editable = true}
+aristotle-bg-workers = {path = "./python/aristotle-bg-workers", editable = true}
 aristotle-dataset-extensions = {path = "./python/aristotle-dataset-extensions", editable = true}
 aristotle-glossary = {path = "./python/aristotle-glossary/", editable = true}
 aristotle-mdr-api = {path = "./python/aristotle-mdr-api", editable = true}
