--- a/assets/package.json
+++ b/assets/package.json
@@ -20,7 +20,8 @@
     "uiv": "^0.28.0",
     "vis": "^4.21.0",
     "vue": "^2.5.17",
-    "vue-simple-suggest": "^1.8.2"
+    "vue-simple-suggest": "^1.8.2",
+    "vuedraggable": "^2.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
