--- a/assets/package.json
+++ b/assets/package.json
@@ -18,6 +18,7 @@
     "select2": "^4.0.6-rc.1",
     "taggle": "^1.14.0",
     "uiv": "^0.28.0",
+    "vee-validate": "^2.1.3",
     "vis": "^4.21.0",
     "vue": "^2.5.17",
     "vue-simple-suggest": "^1.8.2",
