--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,8 @@ assets/coverage/*
 
 # mypy
 .mypy_cache/*
+
+# Ignore .ds_store files for macOS users:
+.DS_Store
+python/comet-indicator-registry/comet/templates/comet/extra_content/*
+
